font-size variables. fixed alignment in testimonials

--- a/client/style/components/_fonts.scss
+++ b/client/style/components/_fonts.scss
@@ -1,3 +1,9 @@
 $main: 'Quicksand', sans-serif;
 $accent: 'Pacifico', cursive;
 $header: 'Josefin Slab', serif;
+
+$font-large-x:  1.8em;
+$font-large:  1.6em;
+$font-medium:  1.4em;
+$font-small : 1.25em;
+$font-small-x : 0.95em;
